--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,12 +14,12 @@ body {
 }
 
 a {
-  color: #0563bb;
+  color: #e2703a;
   text-decoration: none;
 }
 
 a:hover {
-  color: #067ded;
+  color: #d44000;
   text-decoration: none;
 }
 
@@ -37,7 +37,7 @@ h1, h2, h3, h4, h5, h6 {
   right: 15px;
   bottom: 15px;
   z-index: 996;
-  background: #0563bb;
+  background: #e2703a;
   width: 40px;
   height: 40px;
   border-radius: 50px;
@@ -51,7 +51,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .back-to-top:hover {
-  background: #0678e3;
+  background: #d44000;
   color: #fff;
 }
 
@@ -79,7 +79,7 @@ h1, h2, h3, h4, h5, h6 {
   position: fixed;
   top: calc(50% - 30px);
   left: calc(50% - 30px);
-  border: 6px solid #0563bb;
+  border: 6px solid #e2703a;
   border-top-color: #fff;
   border-bottom-color: #fff;
   border-radius: 50%;
@@ -204,7 +204,7 @@ h1, h2, h3, h4, h5, h6 {
 
 .nav-menu a:hover, .nav-menu .active, .nav-menu li:hover > a {
   color: #fff;
-  background: #0563bb;
+  background: #e2703a;
 }
 
 .nav-menu a:hover span, .nav-menu .active span, .nav-menu li:hover > a span {
@@ -253,7 +253,7 @@ h1, h2, h3, h4, h5, h6 {
 
 .mobile-nav-active .mobile-nav-toggle {
   color: #fff;
-  background-color: #0563bb;
+  background-color: #e2703a;
 }
 
 /*--------------------------------------------------------------
@@ -262,7 +262,7 @@ h1, h2, h3, h4, h5, h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background: url("../img/hero-bg.jpg") top right no-repeat;
+  background: url("../img/hero-bg.png") top right no-repeat;
   background-size: cover;
   position: relative;
 }
@@ -299,7 +299,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 #hero p span {
-  color: #0563bb;
+  color: #e2703a;
   letter-spacing: 1px;
 }
 
@@ -317,7 +317,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 #hero .social-links a:hover {
-  color: #0563bb;
+  color: #d44000;
 }
 
 @media (max-width: 992px) {
@@ -375,7 +375,7 @@ section {
   display: block;
   width: 40px;
   height: 3px;
-  background: #0563bb;
+  background: #e2703a;
   bottom: 0;
   left: calc(50% - 20px);
 }
@@ -411,7 +411,7 @@ section {
 .about .content ul i {
   font-size: 16px;
   margin-right: 5px;
-  color: #0563bb;
+  color: #e2703a;
   line-height: 0;
 }
 
@@ -437,7 +437,7 @@ section {
   left: 50%;
   transform: translateX(-50%);
   font-size: 24px;
-  background: #0563bb;
+  background: #e2703a;
   color: #fff;
   border-radius: 50px;
   display: inline-flex;
@@ -494,7 +494,7 @@ section {
   width: 1px;
   height: 10px;
   transition: .9s;
-  background-color: #0563bb;
+  background-color: #e2703a;
 }
 
 /*--------------------------------------------------------------
@@ -511,7 +511,7 @@ section {
 .resume .resume-item {
   padding: 0 0 20px 20px;
   margin-top: -2px;
-  border-left: 2px solid #0563bb;
+  border-left: 2px solid #e2703a;
   position: relative;
 }
 
@@ -521,7 +521,7 @@ section {
   font-weight: 600;
   text-transform: uppercase;
   font-family: "Poppins", sans-serif;
-  color: #0563bb;
+  color: #e2703a;
   margin-bottom: 10px;
 }
 
@@ -555,7 +555,7 @@ section {
   left: -9px;
   top: 0;
   background: #fff;
-  border: 2px solid #0563bb;
+  border: 2px solid #e2703a;
 }
 
 /*--------------------------------------------------------------
@@ -589,7 +589,7 @@ section {
 }
 
 .portfolio #portfolio-flters li:hover, .portfolio #portfolio-flters li.filter-active {
-  color: #0563bb;
+  color: #e2703a;
 }
 
 .portfolio #portfolio-flters li:last-child {
@@ -689,7 +689,7 @@ section {
 }
 
 .portfolio .portfolio-wrap .portfolio-links a:hover {
-  color: #148af9;
+  color: #d44000;
 }
 
 .portfolio .portfolio-wrap:hover::before {
@@ -735,11 +735,11 @@ section {
   height: 12px;
   background-color: #fff;
   opacity: 1;
-  border: 1px solid #0563bb;
+  border: 1px solid #e2703a;
 }
 
 .portfolio-details .portfolio-details-slider .swiper-pagination .swiper-pagination-bullet-active {
-  background-color: #0563bb;
+  background-color: #d44000;
 }
 
 .portfolio-details .portfolio-info {
@@ -976,11 +976,11 @@ section {
   height: 12px;
   background-color: #fff;
   opacity: 1;
-  border: 1px solid #0563bb;
+  border: 1px solid #e2703a;
 }
 
 .testimonials .swiper-pagination .swiper-pagination-bullet-active {
-  background-color: #0563bb;
+  background-color: #e2703a;
 }
 
 @media (min-width: 992px) {
@@ -999,7 +999,7 @@ section {
 
 .contact .info i {
   font-size: 20px;
-  color: #0563bb;
+  color: #45505b;
   float: left;
   width: 44px;
   height: 44px;
@@ -1031,7 +1031,7 @@ section {
 }
 
 .contact .info .email:hover i, .contact .info .address:hover i, .contact .info .phone:hover i {
-  background: #0563bb;
+  background: #e2703a;
   color: #fff;
 }
 
@@ -1101,7 +1101,7 @@ section {
 }
 
 .contact .php-email-form button[type="submit"] {
-  background: #0563bb;
+  background: #e2703a;
   border: 0;
   padding: 10px 35px;
   color: #fff;
@@ -1110,7 +1110,7 @@ section {
 }
 
 .contact .php-email-form button[type="submit"]:hover {
-  background: #0678e3;
+  background: #d44000;
 }
 
 @-webkit-keyframes animate-loading {
@@ -1165,7 +1165,7 @@ section {
 #footer .social-links a {
   font-size: 18px;
   display: inline-block;
-  background: #0563bb;
+  background: #e2703a;
   color: #fff;
   line-height: 1;
   padding: 8px 0;
@@ -1178,7 +1178,7 @@ section {
 }
 
 #footer .social-links a:hover {
-  background: #0678e3;
+  background: #d44000;
   color: #fff;
   text-decoration: none;
 }
